@@ -306,6 +306,9 @@
 
       <li><a href="core.html#files">&lt;Files&gt;</a></li>
 
+      <li><a href="mod_negotiation.html#forcelanguagepriority"
+           >ForceLanguagePriority</a></li>
+
       <li><a
       href="core.html#filesmatch">&lt;FilesMatch&gt;</a></li>
 
